Bug 855807 - Register 'inliner' and not 'inlinee' as the aborted script r=shu